# CipherTransLocal

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: ANDROID.md  ANDROID_MOBILE_DISCOVERY_2026-05-08.md  DAILY_USABILITY_FIXES_2026-05-08.md  DEVELOPMENT.md  LAN_TRANSFER_AUDIT_2026-05-16.md  LAN_TRANSFER_OPTIMIZATION_2026-05-12.md  LAN_TRANSFER_STABILITY_2026-05-12.md  NEXT_STEPS.md  PRD.md  index.html  robots.txt  sitemap.xml
scripts/: check-android-env.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  discovery.rs  lib.rs  main.rs  models.rs  transfer.rs
src/components/: BrandLogo.tsx  ChatWindow.tsx  FileItem.tsx  History.tsx  MobileHistory.tsx  MobileSettings.tsx  MobileShell.tsx  Settings.tsx  Sidebar.tsx
src/stores/: useStore.ts
src/types/: index.ts
src/utils/: device.ts  errors.ts
